compiler/tests/success/syscall/x86-64/bug_1462.jazz
export fn main() {
  stack u8[1] s;
  _ = #randombytes(s);
}

