compiler/tests/fail/arm-m4/mvn_imm_too_large.jazz
export
fn main(reg u32 x) {
    x = #MVN(0x0000caca);
    [x] = x;
}
